@@ -90,6 +90,7 @@ Revision:
 * #260: fixed redirect loop for non-admin users in imProfile | ticket from addons (Phoenyx)
 * #722: description for image upload content area is now fully readable (IPF) (Phoenyx)
 * #293: About page in imProfile is working properly now | ticket from addons (Phoenyx)
+* #284: pictures, tribe pictures and audio files are now deleted together with the record | ticket from addons (Phoenyx)
 
 ===2009-06-20 : 1.2 Alpha 2.1 ===
 '''Fixed'''
